--- a/lectures/lecture-17.qmd
+++ b/lectures/lecture-17.qmd
@@ -1,5 +1,5 @@
 ---
-title: Lecture 17
+title: Lecture 17/18
 subtitle: The Central Limit Theorem and the Sample Mean
 format: html
 date: 2023-11-07
@@ -20,7 +20,7 @@ sapply(list.files(here::here('R'), full.names = T), source)
 
 Let's say each one of you goes out and finds 25 people and find their average height. That would give us 30 estimates the average height of 25 people. We can then create a histogram of those 30 estimates and describe that probability distribution.
 
-For example, let say the heights of students are normally distributed with $\mu = 5$ and $\sigma = 1$. Can you make any guesses about what the distribution of the *averages* of 25 students would look like? What about the maximum of each group of 25 students?\
+For example, let say the heights of students are normally distributed with $\mu = 5$ and $\sigma = 1$. Can you make any guesses about what the distribution of the *averages* of 25 students would look like?\
 \
 \
 \
